--- a/client/html/nav.html
+++ b/client/html/nav.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-default navbar-fixed-top">
+ <nav class="navbar navbar-default navbar-fixed-top" ng-controller="navCtrl">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ui-sref="browse">MovieSwap</a>
+        <a class="navbar-brand" ui-sref="interest">MovieSwap</a>
       </div>
 
 
@@ -18,15 +18,10 @@
           <!-- <li><a ui-sref="/new-listing.html">New Listing</a></li> -->
           <li><a ui-sref="profile">Profile</a></li>
           <li><a href="/login" ng-if="!user">Login</a></li>
-          <!-- on click of login "user.isLogged === true" -->
-          <li><a ui-sref="login" ng-id="user.isLogged">Logout</a></li>
-          <!-- on click  of logout "user.isLogged === false" -->
+          <li><a ui-sref="goodbye" ng-if="user" ng-click="logout(user)">Logout</a></li>
+
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 
-<!--  <footer class="text-center">
-    <p>&#169;2016</p>
-  </footer>
- -->
