--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -1,99 +1,135 @@
 
 <div id="profile" class="container">
   <div class="col-xs-12">
-    <a href="" class="btn btn-default btn-sm fa fa-pencil edit-btn"></a>
-  </div>
-  <div class="col-xs-12 text-center">
-    <img src="http://placehold.it/100x100" alt="">
-  </div>
-  <div class="col-xs-12 text-center">
-    <h1>Hello, {{user.givenName}}</h1>
-    <p>{{user.username}}</p>
-  </div>
+    <a href="" class="btn btn-default btn-sm fa fa-pencil edit-btn" data-toggle="modal" data-target="#myModal"></a>
 
-  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-    <h2 class="text-center">Inbox</h2>
-    <div class="well inbox">
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title">
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Edit Profile</h4>
+          </div>
+          <div class="modal-body">
+
+
+            <md-input-container>
+            <label>Name:</label>
+            <input type="text" ng-model="user.givenName">
+          </md-input-container>
+          <md-input-container>
+          <label>Email:</label>
+          <input type="text" ng-model="user.username">
+        </md-input-container>
+        <md-input-container>
+          <label>Avatar:</label>
+          <input type="text" ng-model="user.photo">
+        </md-input-container>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="closeModal btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+</div>
+<div class="col-xs-12 text-center">
+  <img ng-src="http://placehold.it/100x100" alt="http://placehold.it/100x100">
+</div>
+<div class="col-xs-12 text-center">
+  <h1>Hello, {{user.givenName}}</h1>
+  <p>{{user.username}}</p>
+</div>
+
+<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+  <h2 class="text-center">Inbox</h2>
+  <div class="well inbox">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne">
+          <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                Tradername Someone
-              </a>
-              <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
-            </h4>
-          </div>
-          <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              <br>
-              <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
-              <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
-            </div>
+              Tradername Someone
+            </a>
+            <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
+          </h4>
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+          <div class="panel-body">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <br>
+            <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
+            <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingTwo">
-            <h4 class="panel-title">
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingTwo">
+          <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Imaguy Traderman
-              </a>
-              <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              <br>
-              <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
-              <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
-            </div>
+              Imaguy Traderman
+            </a>
+            <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
+          </h4>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+          <div class="panel-body">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <br>
+            <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
+            <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading" role="tab" id="headingThree">
-            <h4 class="panel-title">
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingThree">
+          <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Soandso Swapgirl
-              </a>
-              <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
-            </h4>
-          </div>
-          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              <br>
-              <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
-              <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
-            </div>
+              Soandso Swapgirl
+            </a>
+            <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
+          </h4>
+        </div>
+        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+          <div class="panel-body">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <br>
+            <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
+            <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 
 
 
+<div class="col-xs-12 col-sm-4">
+  <h2>Movies I have...</h2>
 
-  <div class="col-xs-12 col-sm-4">
-    <h2>Movies I have...</h2>
+  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
+  <span md-highlight-text="searchText">{{movie}}</span>
+</md-autocomplete>
+<md-button class="md-raised">Submit</md-button>
 
-    <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
-    <span md-highlight-text="searchText">{{movie}}</span>
-  </md-autocomplete>
-  <md-button class="md-raised">Submit</md-button>
-
-  <div class="well scrolly">
-    <!-- ng-repeat on have  -->
-    <div class="panel trade-panel"> 
-      <div class="col-xs-12 col-sm-3">
-        <img src="http://placehold.it/50x75" alt="">
-      </div>
-      <h3><a href="/detail.html">Movie Title</a></h3>
-      <h4>Permanent Trade</h4>
+<div class="well scrolly">
+  <!-- ng-repeat on have  -->
+  <div class="panel trade-panel"> 
+    <div class="col-xs-12 col-sm-3">
+      <img src="http://placehold.it/50x75" alt="">
     </div>
+    <h3><a href="/detail.html">Movie Title</a></h3>
+   <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
+    <!-- <h4>Permanent Trade</h4> -->
+  </div>
 <!--       <div class="panel trade-panel">
         <div class="col-xs-12 col-sm-3">
           <img src="http://placehold.it/50x75" alt="">
@@ -134,6 +170,7 @@
           <img src="http://placehold.it/50x75" alt="">
         </div>
         <h3><a href="/detail.html">Movie Title</a></h3>
+        <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
         <h4>Permanent Trade</h4>
       </div>
       <div class="panel trade-panel">
@@ -168,15 +205,15 @@
     <span md-highlight-text="searchText">{{movie}}</span>
   </md-autocomplete>
   <md-button class="md-raised">Submit</md-button>
-    <div class="well scrolly">
-     <!-- ng-repeat on trades history -->
-     <div class="panel trade-panel text-center history">
-      <img src="http://placehold.it/50x75" alt="">
-      <h4>for</h4>
-      <img src="http://placehold.it/50x75" alt="">
-      <p class="text-center">Permanent Trade</p>
-      <p>12/13/16</p>
-    </div>
+  <div class="well scrolly">
+   <!-- ng-repeat on trades history -->
+   <div class="panel trade-panel text-center history">
+    <img src="http://placehold.it/50x75" alt="">
+    <h4>for</h4>
+    <img src="http://placehold.it/50x75" alt="">
+    <p class="text-center">Permanent Trade</p>
+    <p>12/13/16</p>
+  </div>
     <!--   <div class="panel trade-panel text-center history">
         <img src="http://placehold.it/50x75" alt="">
         <h4>for</h4>
