--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ui-sref="interest">DVD Swap</a>
+        <a class="navbar-brand" ui-sref="interest" style="italic">DVD Swap</a>
       </div>
 
 
@@ -24,4 +24,3 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-
