--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -83,14 +83,16 @@
 <div class="col-xs-12 col-sm-4">
   <h2>Movies I have...</h2>
   <md-autocomplete
+  md-min-length="3"
   md-selected-item="selectedItem"
+  md-no-cache="true"
   md-search-text="searchText"
-  md-items="movie in getMatches(searchText)" 
+  md-items="movie in autoComplete" 
   md-search-text-change="searchTextChange(searchText)"
-  md-item-text="movie.title"
+  md-item-text="movie.Title"
   placeholder="Title"
   class="profileInput">
-  <span md-highlight-text="searchText">{{movie.title}} Year: {{movie.year}} Genre: {{movie.genre}}</span>
+  <span md-highlight-text="searchText">{{movie.Title}} Year: {{movie.Year}}</span>
 </md-autocomplete>
 <md-button class="md-raised profileBtn  md-fab" ng-click="addHave(searchText)"><i class="fa fa-arrow-right" aria-hidden="true"></i></md-button>
 <div class="well scrolly">
@@ -108,7 +110,7 @@
 
 <div class="col-xs-12 col-sm-4">
   <h2>Movies I want...</h2>
-  <md-autocomplete md-selected-item="selectedItem2" md-search-text="searchText2" md-items="movie in getMatches(searchText2)" md-item-text="movie"  placeholder="Title" class="profileInput">
+  <md-autocomplete md-selected-item="selectedItem2" md-search-text="searchText2" md-items="movie in autocomplete" md-item-text="movie"  placeholder="Title" class="profileInput">
   <span md-highlight-text="searchText2">{{movie}}</span>
 </md-autocomplete>
 <md-button class="md-raised profileBtn md-fab" ng-click="addWant(searchText2)"><i class="fa fa-arrow-right" aria-hidden="true"></i></md-button>
